Title Alignments Fixed

--- a/src/Modules/Home/Components/banner-frame/banner-frame.css
+++ b/src/Modules/Home/Components/banner-frame/banner-frame.css
@@ -4,5 +4,8 @@
     margin: 2.5% 33.3% 2.5%;
 }
 .title {
-
+    font-size: 60px;
+    text-align: center;
+    color: steelblue;
+    font-family: cursive;
 }
